--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ node_modules/
 .expo/
 dist/
 .vscode/
-package-lock.json
 npm-debug.*
 *.env
 *.jks
@@ -12,6 +11,9 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
+
+package-lock.json
+sanity.js
 
 # macOS
 .DS_Store
